--- a/src/scss/components/_searchbar.scss
+++ b/src/scss/components/_searchbar.scss
@@ -28,15 +28,7 @@
 	}
 
 	.item-actions-touch {
-		visibility: hidden;
-
-		@include bp-down-normalized(xs) {
-			padding-left: $default-padding-x-touch;
-		}
-
-		.search-results:not(.search-active) & {
-			visibility: visible;
-		}
+		margin-left: $default-padding-x-touch;
 	}
 }
 
